Manual update, token limit errors, file naming convention, cross-platform disk space check, transcript formatting.

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+# Required Configuration
 # YouTube API Configuration
 YOUTUBE_API_KEY=your_youtube_api_key_here
 PLAYLIST_ID=your_playlist_id_here
@@ -5,8 +6,10 @@ PLAYLIST_ID=your_playlist_id_here
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Google Drive Configuration
-GOOGLE_DRIVE_CREDS_FILE=path_to_your_credentials.json
-GDRIVE_UNREAD_FOLDER_ID=your_unread_folder_id_here
-GDRIVE_PROCESSED_FOLDER_ID=your_processed_folder_id_here
-OBSIDIAN_VAULT_PATH=path_to_your_obsidian_vault
+# Obsidian Configuration
+OBSIDIAN_VAULT_DIR=path_to_your_obsidian_vault
+
+# Optional Google Drive Configuration
+# GOOGLE_DRIVE_CREDS_FILE=path_to_your_credentials.json
+# GDRIVE_UNREAD_FOLDER_ID=your_unread_folder_id_here
+# GDRIVE_PROCESSED_FOLDER_ID=your_processed_folder_id_here
