--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Obsidian Configuration
 OBSIDIAN_VAULT_DIR=path_to_your_obsidian_vault
 
+# Optional YouTube Authentication (if encountering bot detection)
+# YOUTUBE_USERNAME=your_youtube_email
+# YOUTUBE_PASSWORD=your_youtube_password
+
 # Optional Google Drive Configuration
 # GOOGLE_DRIVE_CREDS_FILE=path_to_your_credentials.json
 # GDRIVE_UNREAD_FOLDER_ID=your_unread_folder_id_here
